<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>
    <groupId>org.jexpress.mockservice</groupId>
    <artifactId>MockService</artifactId>
    <version>1.1.0</version>
    <name>Hello Summer - MockService ${project.version}</name>
    <url>https://github.com/SummerBootFramework/jExpressDemo-HelloSummer</url>

    <properties>
        <!-- common properties and dependencies -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <maven-clean.version>3.5.0</maven-clean.version>
        <maven-compiler.version>3.15.0</maven-compiler.version>
        <maven-dependency.version>3.10.0</maven-dependency.version>
        <maven-jar.version>3.5.0</maven-jar.version>
        <maven-resources.version>3.5.0</maven-resources.version>
        <maven-surefire.version>3.5.5</maven-surefire.version>
        <maven-failsafe.version>3.5.5</maven-failsafe.version>
        <swagger-maven.version>2.2.48</swagger-maven.version>
        <jexpress.version>2.6.9</jexpress.version>
        <testng.version>7.12.0</testng.version>

        <!-- application properties and dependencies-->
        <main.class>${api.package}.app.Main</main.class>
        <api.package>${groupId}</api.package>
        <graalvm.version>25.0.3</graalvm.version>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.summerboot/jexpress -->
        <dependency>
            <groupId>org.summerboot</groupId>
            <artifactId>jexpress</artifactId>
            <version>${jexpress.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.freemarker</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.openhtmltopdf</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.zaxxer</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.protobuf</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/org.graalvm.js/js -->
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js</artifactId>
            <version>${graalvm.version}</version>
            <type>pom</type>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.graalvm.js/js-scriptengine -->
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js-scriptengine</artifactId>
            <version>${graalvm.version}</version>
        </dependency>

        <!-- Testing -->
        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>maven.snapshots</id>
            <name>Maven Snapshot Repository</name>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <!--<finalName>${artifactId}</finalName>-->

        <plugins>
            <!-- To generate openapi -->
            <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-maven-plugin-jakarta -->
            <plugin>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-maven-plugin-jakarta</artifactId>
                <version>${swagger-maven.version}</version>
                <configuration>
                    <outputPath>.</outputPath>
                    <outputFileName>openapi</outputFileName>
                    <!-- <configurationFilePath>${project.basedir}/src/main/resources/openapi.json</configurationFilePath> -->
                    <outputFormat>JSONANDYAML</outputFormat>
                    <resourcePackages>
                        <package>${api.package}</package>
                    </resourcePackages>
                    <prettyPrint>true</prettyPrint>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>resolve</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean.version}</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>run</directory>
                            <includes>
                                <include>*.jar</include>
                                <include>lib/**</include>
                                <include>lib</include>
                                <include>**/log/**</include>
                                <include>**/log</include>
                                <include>**/temp/**</include>
                                <include>**/temp</include>
                            </includes>
                            <excludes>
                                <exclude>plugin/*.jar</exclude>
                            </excludes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                        <fileset>
                            <directory>src/test</directory>
                            <includes>
                                <include>**/temp/**</include>
                                <include>**/temp</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                        <fileset>
                            <directory>.</directory>
                            <includes>
                                <include>etc/*</include>
                                <include>etc</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency.version}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/../run/lib</outputDirectory>
                            <outputDirectory>run/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <!-- To disable for local dependency -->
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar.version}</version>
                <configuration>
                    <outputDirectory>run</outputDirectory>
                    <archive>
                        <manifest>
                            <mainClass>${main.class}</mainClass>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <!-- To force the use of '-SNAPSHOT' version naming, simply disable the <useUniqueVersions>  -->
                            <useUniqueVersions>false</useUniqueVersions>
                        </manifest>
                        <!-- To enable for local dependency
                        <manifestEntries>
                            <Class-Path>lib/lib1-1.0.jar lib/lib2-1.0.jar</Class-Path>
                        </manifestEntries> -->
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>

            <!-- Unit Test Plugin -->
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire.version}</version>
                <configuration>
                    <argLine>-Djava.awt.headless=true -Xms2G -Xmx2G -XX:+UseZGC -XX:ZUncommitDelay=300
                        -XX:+ZGenerational -XX:+AlwaysPreTouch -XX:+PerfDisableSharedMem
                        -XX:+ZUncommit -XX:+DisableExplicitGC -XX:MaxDirectMemorySize=1g -XX:+HeapDumpOnOutOfMemoryError
                        -XX:HeapDumpPath=heapdump.hprof -XX:+ExitOnOutOfMemoryError
                        -Xlog:gc*:file=gc.log:time,level,tags:filecount=5,filesize=10M -Dfile.encoding=UTF-8
                        -Duser.timezone=America/Toronto
                        -Dio.netty.handler.ssl.openssl.engine.enable=true -Dio.netty.leakDetectionLevel=SIMPLE
                        -Dio.netty.native.workdir=lib
                        -Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector
                    </argLine>
                </configuration>
            </plugin>

            <!-- Integration Test Plugin -->
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe.version}</version>
                <configuration>
                    <argLine>-Djava.awt.headless=true -Xms2G -Xmx2G -XX:+UseZGC -XX:ZUncommitDelay=300
                        -XX:+ZGenerational -XX:+AlwaysPreTouch -XX:+PerfDisableSharedMem
                        -XX:+ZUncommit -XX:+DisableExplicitGC -XX:MaxDirectMemorySize=1g -XX:+HeapDumpOnOutOfMemoryError
                        -XX:HeapDumpPath=heapdump.hprof -XX:+ExitOnOutOfMemoryError
                        -Xlog:gc*:file=gc.log:time,level,tags:filecount=5,filesize=10M -Dfile.encoding=UTF-8
                        -Duser.timezone=America/Toronto
                        -Dio.netty.handler.ssl.openssl.engine.enable=true -Dio.netty.leakDetectionLevel=SIMPLE
                        -Dio.netty.native.workdir=lib
                        -Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
